# turquoise

./: .gitignore  Cargo.toml  index.html
src/: game.rs  main.rs
src/components/: board.rs  mod.rs  navbar.rs  pot.rs  tile.rs
src/components/pot/: commonpot.rs  mod.rs  pot.rs  potarea.rs
src/components/tile/: tile.rs
