[package]
name = "turquoise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.9", features = ["js"] }
gloo-console = "0.2.3"
rand = "0.8.5"
wasm-bindgen = "0.2.85"
yew = { version = "0.20.0", features = ["csr"] }
